welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: Missing closing brace `}' assumed here
def faireL(){
^PatternPicture:1: error: expected class or object definition
def faireL(){
^PatternPicture:19: error: expected class or object definition
def faireMotif()
^PatternPicture:20: error: expected class or object definition
{
^PatternPicture:35: error: expected start of definition
override def run() {
         ^